examples/errors/parse_missing_colon.rsp
; Should error: binding `x 1` is missing the `: type` annotation.
;;! error_at: 7:6
;;! error_contains: expected ':'

(defn main [] -> i32
  (let [x: i32 1
    x))
